# CamCore

./: Cargo.toml  HACKING.md  Session.vim  rustfmt.toml
engine/: Cargo.toml
engine/src/: assembler.rs  driver.rs  io.rs  lang.rs  lib.rs  plumbing.rs  raws.rs  types.rs
engine/src/io/: file_tree.rs  types.rs
engine/src/lang/: parse.rs  preprocess.rs  syntax.rs
engine/src/lang/parse/: common.rs  core.rs
engine/src/lang/parse/core/: tests.rs
engine/src/lang/parse/core/tests/: quickcheck_tests.rs
engine/src/lang/preprocess/: parse.rs  tests.rs
engine/src/lang/preprocess/parse/: tests.rs
engine/src/lang/preprocess/parse/snapshots/: cam_core_internal__lang__preprocess__parse__tests__args and quotes.snap  cam_core_internal__lang__preprocess__parse__tests__comment placement.snap  cam_core_internal__lang__preprocess__parse__tests__dont_lex_line_comment.snap  cam_core_internal__lang__preprocess__parse__tests__include_with_comments.snap  cam_core_internal__lang__preprocess__parse__tests__message_with_comments.snap  cam_core_internal__lang__preprocess__parse__tests__no body.snap  cam_core_internal__lang__preprocess__parse__tests__quotes only.snap  cam_core_internal__lang__preprocess__parse__tests__realistic_test.snap  cam_core_internal__lang__preprocess__parse__tests__spaces.snap  cam_core_internal__lang__preprocess__parse__tests__star_slash_tricky.snap  ea__lang__preprocess__parse__tests__dont_lex_line_comment.snap  ea__lang__preprocess__parse__tests__include.snap  (+1 more)
engine/src/lang/preprocess/snapshots/: cam_core_internal__lang__preprocess__tests__e2e_basic.snap
engine/src/lang/syntax/: impls.rs  span.rs
engine/src/raws/: builder.rs  parse.rs
engine/src/types/: generic.rs  hkt.rs  linked_list.rs  string_with_vars.rs
(+84 files in other folders)
