[package]
name = "cam_core"
version = "0.1.0"
authors = ["Cameron Wong <cam@camdar.io>"]
edition = "2021"

[lib]
name = "cam_core_internal"
path = "src/lib.rs"

[[bin]]
name = "cam_core"
path = "src/main.rs"


[dependencies]
chumsky = "0.8.0"
thiserror = "1.0.20"
phf = { version = "0.8.0", features = ["macros"] }
regex = "1.3.7"
lazy_static = "1.4.0"
snailquote = "0.3.0"
indexmap = "1.4.0"
relative-path = "1.3.2"

