[package]
name = "cam_core_lib"
version = "0.1.0"
authors = ["Cameron Wong <cam@camdar.io>"]
edition = "2021"

[lib]
name = "cam_core_internal"
path = "src/lib.rs"

[dependencies]
chumsky = "0.8.0"
indexmap = "1.4.0"
relative-path = "1.3.2"
# XXX: we probably don't need to pull in an entire crate for this
nonempty = "0.8.1"

[dev-dependencies]
insta = "1.15.0"
#quickcheck = "1"
#quickcheck_macros = "1"
